# rasterizer-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENCE.md  README.md
include/: model.hpp  screen.hpp  types.hpp  vector.hpp
src/: main.cpp  model.cpp  types.cpp  vector.cpp
